--- a/randomizer.ui
+++ b/randomizer.ui
@@ -258,12 +258,36 @@
              </widget>
             </item>
             <item>
+             <widget class="QCheckBox" name="randomize_enemy_anim_speed">
+              <property name="toolTip">
+               <string>Randomizes the speed at which each enemy's animations play at, which affects their attack speed.</string>
+              </property>
+              <property name="text">
+               <string>Enemy Animation Speed</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout_18">
+            <item>
              <widget class="QCheckBox" name="randomize_portraits">
               <property name="toolTip">
                <string>Randomizes where portraits are located (PoR only).</string>
               </property>
               <property name="text">
                <string>Portraits</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QCheckBox" name="randomize_red_walls">
+              <property name="toolTip">
+               <string>Randomizes what bullet souls is needed to open the red walls (DoS only).</string>
+              </property>
+              <property name="text">
+               <string>Red Soul Walls</string>
               </property>
              </widget>
             </item>
@@ -363,20 +387,6 @@
              </widget>
             </item>
             <item>
-             <widget class="QCheckBox" name="randomize_enemy_anim_speed">
-              <property name="toolTip">
-               <string>Randomizes the speed at which each enemy's animations play at, which affects their attack speed.</string>
-              </property>
-              <property name="text">
-               <string>Enemy Animation Speed</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
-          <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_18">
-            <item>
              <widget class="QCheckBox" name="randomize_rooms_map_friendly">
               <property name="text">
                <string>Rooms and Areas (Map-friendly)</string>
@@ -463,8 +473,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>100</width>
-            <height>30</height>
+            <width>590</width>
+            <height>436</height>
            </rect>
           </property>
           <layout class="QFormLayout" name="formLayout_5">
@@ -763,7 +773,9 @@
   <tabstop>randomize_villagers</tabstop>
   <tabstop>randomize_weapon_synths</tabstop>
   <tabstop>randomize_enemy_stats</tabstop>
+  <tabstop>randomize_enemy_anim_speed</tabstop>
   <tabstop>randomize_portraits</tabstop>
+  <tabstop>randomize_red_walls</tabstop>
   <tabstop>randomize_players</tabstop>
   <tabstop>randomize_bosses</tabstop>
   <tabstop>randomize_area_connections</tabstop>
@@ -771,7 +783,6 @@
   <tabstop>randomize_starting_room</tabstop>
   <tabstop>randomize_enemy_ai</tabstop>
   <tabstop>randomize_skill_sprites</tabstop>
-  <tabstop>randomize_enemy_anim_speed</tabstop>
   <tabstop>randomize_rooms_map_friendly</tabstop>
   <tabstop>about_button</tabstop>
   <tabstop>tabWidget</tabstop>
@@ -779,6 +790,17 @@
   <tabstop>enable_glitch_reqs</tabstop>
   <tabstop>bonus_starting_items</tabstop>
   <tabstop>scrollArea</tabstop>
+  <tabstop>name_unnamed_skills</tabstop>
+  <tabstop>unlock_all_modes</tabstop>
+  <tabstop>reveal_breakable_walls</tabstop>
+  <tabstop>reveal_bestiary</tabstop>
+  <tabstop>remove_area_names</tabstop>
+  <tabstop>fix_first_ability_soul</tabstop>
+  <tabstop>fix_luck</tabstop>
+  <tabstop>no_touch_screen</tabstop>
+  <tabstop>unlock_boss_doors</tabstop>
+  <tabstop>remove_slot_machines</tabstop>
+  <tabstop>add_magical_tickets</tabstop>
   <tabstop>fix_infinite_quest_rewards</tabstop>
   <tabstop>dont_randomize_change_cube</tabstop>
   <tabstop>open_world_map</tabstop>
