--- a/randomizer.ui
+++ b/randomizer.ui
@@ -472,8 +472,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>100</width>
-            <height>30</height>
+            <width>590</width>
+            <height>436</height>
            </rect>
           </property>
           <layout class="QFormLayout" name="formLayout_5">
@@ -498,16 +498,6 @@
          </property>
          <layout class="QGridLayout" name="gridLayout_2">
           <item row="0" column="2">
-           <widget class="QCheckBox" name="reveal_breakable_walls">
-            <property name="toolTip">
-             <string>Breakable walls will always blink as if you have Peeping Eye/Eye for Decay on.</string>
-            </property>
-            <property name="text">
-             <string>Reveal breakable walls</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1">
            <widget class="QCheckBox" name="unlock_all_modes">
             <property name="toolTip">
              <string>Unlocks alternate modes that normally require you to beat the main game first.</string>
@@ -520,7 +510,17 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="0">
+          <item row="1" column="1">
+           <widget class="QCheckBox" name="reveal_bestiary">
+            <property name="toolTip">
+             <string>All enemies will appear in the bestiary, even before you kill them once.</string>
+            </property>
+            <property name="text">
+             <string>Reveal bestiary</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
            <widget class="QCheckBox" name="name_unnamed_skills">
             <property name="toolTip">
              <string>Gives Julius/Yoko/Alucard/Arma Felix/Arma Chiroptera's skills names so they can be distinguished from one another.</string>
@@ -533,17 +533,7 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
-           <widget class="QCheckBox" name="reveal_bestiary">
-            <property name="toolTip">
-             <string>All enemies will appear in the bestiary, even before you kill them once.</string>
-            </property>
-            <property name="text">
-             <string>Reveal bestiary</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
+          <item row="1" column="2">
            <widget class="QCheckBox" name="remove_area_names">
             <property name="toolTip">
              <string>Removes the area names that appear on screen when you first enter an area.</string>
@@ -553,6 +543,26 @@
             </property>
             <property name="checked">
              <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QCheckBox" name="scavenger_mode">
+            <property name="toolTip">
+             <string>Common enemies never drop items, souls, or glyphs. You have to rely on pickups you find placed in the world.</string>
+            </property>
+            <property name="text">
+             <string>Scavenger Mode</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QCheckBox" name="reveal_breakable_walls">
+            <property name="toolTip">
+             <string>Breakable walls will always blink as if you have Peeping Eye/Eye for Decay on.</string>
+            </property>
+            <property name="text">
+             <string>Reveal breakable walls</string>
             </property>
            </widget>
           </item>
@@ -672,19 +682,6 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="2">
-           <widget class="QCheckBox" name="dont_randomize_change_cube">
-            <property name="toolTip">
-             <string>The change cube will always be the first item you get.</string>
-            </property>
-            <property name="text">
-             <string>Don't randomize Change Cube</string>
-            </property>
-            <property name="checked">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
           <item row="0" column="1">
            <widget class="QCheckBox" name="skip_emblem_drawing">
             <property name="toolTip">
@@ -692,6 +689,19 @@
             </property>
             <property name="text">
              <string>Skip emblem drawing</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="2">
+           <widget class="QCheckBox" name="dont_randomize_change_cube">
+            <property name="toolTip">
+             <string>The change cube will always be the first item you get.</string>
+            </property>
+            <property name="text">
+             <string>Don't randomize Change Cube</string>
             </property>
             <property name="checked">
              <bool>true</bool>
@@ -818,6 +828,7 @@
   <tabstop>enable_glitch_reqs</tabstop>
   <tabstop>bonus_starting_items</tabstop>
   <tabstop>scrollArea</tabstop>
+  <tabstop>scavenger_mode</tabstop>
   <tabstop>name_unnamed_skills</tabstop>
   <tabstop>unlock_all_modes</tabstop>
   <tabstop>reveal_breakable_walls</tabstop>
