--- a/randomizer.ui
+++ b/randomizer.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>640</width>
-    <height>639</height>
+    <height>668</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -402,7 +402,6 @@
          </layout>
          <zorder></zorder>
          <zorder></zorder>
-         <zorder>horizontalLayoutWidget</zorder>
         </widget>
        </item>
       </layout>
@@ -477,8 +476,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>78</width>
-            <height>22</height>
+            <width>590</width>
+            <height>465</height>
            </rect>
           </property>
           <layout class="QFormLayout" name="formLayout_5">
@@ -674,6 +673,29 @@
           <string>Portrait of Ruin</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_4">
+          <item row="0" column="2">
+           <widget class="QCheckBox" name="dont_randomize_change_cube">
+            <property name="toolTip">
+             <string>The change cube will always be the first item you get.</string>
+            </property>
+            <property name="text">
+             <string>Don't randomize Change Cube</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QCheckBox" name="por_short_mode">
+            <property name="toolTip">
+             <string>Removes 4 random portrait areas from the game. Unlocking Brauner requires beating the bosses of the 4 portraits that remain (not counting Nest of Evil).</string>
+            </property>
+            <property name="text">
+             <string>Short Mode</string>
+            </property>
+           </widget>
+          </item>
           <item row="0" column="0">
            <widget class="QCheckBox" name="fix_infinite_quest_rewards">
             <property name="toolTip">
@@ -700,26 +722,13 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="2">
-           <widget class="QCheckBox" name="dont_randomize_change_cube">
+          <item row="1" column="1" colspan="2">
+           <widget class="QCheckBox" name="always_show_drop_percentages">
             <property name="toolTip">
-             <string>The change cube will always be the first item you get.</string>
+             <string>Drop chances always display as percentages instead of stars.</string>
             </property>
             <property name="text">
-             <string>Don't randomize Change Cube</string>
-            </property>
-            <property name="checked">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="0">
-           <widget class="QCheckBox" name="por_short_mode">
-            <property name="toolTip">
-             <string>Removes 4 random portrait areas from the game. Unlocking Brauner requires beating the bosses of the 4 portraits that remain (not counting Nest of Evil).</string>
-            </property>
-            <property name="text">
-             <string>Short Mode</string>
+             <string>Always have Gambler Glasses effect</string>
             </property>
            </widget>
           </item>
@@ -802,10 +811,10 @@
  <tabstops>
   <tabstop>randomize_button</tabstop>
   <tabstop>clean_rom</tabstop>
-  <tabstop>output_folder</tabstop>
-  <tabstop>seed</tabstop>
   <tabstop>clean_rom_browse_button</tabstop>
+  <tabstop>output_folder</tabstop>
   <tabstop>output_folder_browse_button</tabstop>
+  <tabstop>seed</tabstop>
   <tabstop>generate_seed_button</tabstop>
   <tabstop>randomize_pickups</tabstop>
   <tabstop>randomize_enemies</tabstop>
@@ -823,10 +832,14 @@
   <tabstop>randomize_enemy_anim_speed</tabstop>
   <tabstop>randomize_portraits</tabstop>
   <tabstop>randomize_red_walls</tabstop>
+  <tabstop>randomize_room_connections</tabstop>
+  <tabstop>randomize_area_connections</tabstop>
+  <tabstop>randomize_starting_room</tabstop>
   <tabstop>randomize_players</tabstop>
   <tabstop>randomize_bosses</tabstop>
-  <tabstop>randomize_area_connections</tabstop>
   <tabstop>randomize_enemy_ai</tabstop>
+  <tabstop>randomize_skill_sprites</tabstop>
+  <tabstop>randomize_rooms_map_friendly</tabstop>
   <tabstop>about_button</tabstop>
   <tabstop>tabWidget</tabstop>
   <tabstop>difficulty_level</tabstop>
@@ -845,8 +858,12 @@
   <tabstop>unlock_boss_doors</tabstop>
   <tabstop>remove_slot_machines</tabstop>
   <tabstop>add_magical_tickets</tabstop>
+  <tabstop>always_start_with_rare_ring</tabstop>
   <tabstop>fix_infinite_quest_rewards</tabstop>
+  <tabstop>skip_emblem_drawing</tabstop>
   <tabstop>dont_randomize_change_cube</tabstop>
+  <tabstop>por_short_mode</tabstop>
+  <tabstop>always_show_drop_percentages</tabstop>
   <tabstop>open_world_map</tabstop>
   <tabstop>always_dowsing</tabstop>
  </tabstops>
