--- a/randomizer.ui
+++ b/randomizer.ui
@@ -905,6 +905,7 @@
   <tabstop>randomize_starting_room</tabstop>
   <tabstop>randomize_room_connections</tabstop>
   <tabstop>randomize_area_connections</tabstop>
+  <tabstop>experimental_options_enabled</tabstop>
   <tabstop>randomize_players</tabstop>
   <tabstop>randomize_bosses</tabstop>
   <tabstop>randomize_enemy_ai</tabstop>
@@ -936,6 +937,8 @@
   <tabstop>always_dowsing</tabstop>
   <tabstop>gain_extra_attribute_points</tabstop>
   <tabstop>summons_gain_extra_exp</tabstop>
+  <tabstop>paste_seed_info_field</tabstop>
+  <tabstop>read_seed_info_button</tabstop>
  </tabstops>
  <resources/>
  <connections/>
